@@ -1,0 +1,17 @@
+pkgname=gnome-terminal
+
+post_install() {
+  gconfpkg --install $pkgname
+}
+
+pre_upgrade() {
+  pre_remove $1
+}
+
+post_upgrade() {
+  post_install $1
+}
+
+pre_remove() {
+  gconfpkg --uninstall $pkgname
+}
