@@ -1,39 +1,39 @@
+# Maintainer: Richard Schwab <mail NOSPAM w.tf-w.tf>
 # Contributor: SaThaRiel <sathariel74[at] gmail[dot]com>
 # Contributor: Ahmed Osman <Ashex@aur>
  
 pkgname=gtkpod-git
-pkgver=20110915
-pkgrel=1
+pkgver=gtkpod.2.1.1.7.g5e5c577
+pkgrel=2
+epoch=1
 pkgdesc="a platform independent GUI for Apple's iPod using GTK2"
 arch=('i686' 'x86_64')
-license=('GPL')
 url="http://gtkpod.sourceforge.net"
+license=('GPL')
 depends=('gettext' 'gtk2' 'libgpod-git' 'libid3tag' 'hicolor-icon-theme' 'anjuta')
 makedepends=('autoconf' 'flex' 'git' 'intltool')
 optdepends=('libmp4v2: MP4/h264 support' 'libcurl: for coverart download support' 'libgnome-vfs-2.0: for iPod autodetection under GNOME' 'libcurl: for coverart download support' 'libflac: for FLAC support' 'libvorbis: for ogg libvorbis support')
+provides=('gtkpod')
 conflicts=('gtkpod')
 install=gtkpod.install
-provides=('gtkpod')
-source=()
-md5sums=()
+source=('git://gtkpod.git.sourceforge.net/gitroot/gtkpod/gtkpod#branch=gtk-3.0')
+md5sums=(SKIP)
 
-_gitroot=git://gtkpod.git.sourceforge.net/gitroot/gtkpod/gtkpod
-_gitname=gtkpod
+pkgver() {
+  cd gtkpod
+  git describe --tags | sed "s/^v//; s/-/./g"
+}
 
 build() {
+  cd gtkpod
 
-if [ -d $srcdir/$_gitname ]
-then
-    cd $srcdir/$_gitname && git pull
-else
-    cd $srcdir && git clone -b gtk-3.0 $_gitroot && cd $_gitname
-fi
+  ./autogen.sh --prefix=/usr
+  make
+}
+  
+package() {
+  cd gtkpod
 
-./autogen.sh --prefix=/usr
-make || return 1
-make DESTDIR=$pkgdir install || return 1
-cp $srcdir/$_gitname/src/org.gtkpod.gschema.xml $pkgdir/usr/share/glib-2.0/schemas/
-
-rm -rf $srcdir/$_gitname-build
-
+  make DESTDIR="$pkgdir/" install
+  cp $srcdir/$_gitname/src/org.gtkpod.gschema.xml $pkgdir/usr/share/glib-2.0/schemas/
 }
