@@ -4,9 +4,9 @@
 pkgname=legend-of-grimrock
 pkgdesc='A 3D grid-based dungeon crawler inspired by classic 1980s and 1990s action role-playing games Dungeon Master, Eye of the Beholder and Ultima Underworld.'
 url='http://www.grimrock.net/'
-_pkgdate=2012-12-22
-pkgver=20121222
-pkgrel=5
+_pkgdate=2013-05-15
+pkgver=20130515
+pkgrel=1
 arch=(i686 x86_64)
 license=(custom)
 PKGEXT=.pkg.tar
@@ -18,10 +18,6 @@ optdepends=('libtxc_dxtn: For Mesa S3TC support.')
 source=(
   LegendOfGrimrock-Linux-$_pkgdate.sh::
   $pkgname.desktop
-)
-sha256sums=(
-  b520b8ad907ed95c8a439bc46d5e2c9fdd32d099477be08995abbb45eed288e7
-  a989d2d0d896ec4adaf3d66e19050c519d9e58efc8d588a51ab0185283bf21fb
 )
 
 [ "$CARCH" != "i686" ] && _arch=x86_64 || {
@@ -43,3 +39,6 @@ package() {
 
   install -D $pkgname.desktop $pkgdir/usr/share/applications/$pkgname.desktop
 }
+
+sha256sums=('005066be6ce12ba342e499369070113c6b66a9bea03c6ecb1e5fd0758eb0c39d'
+            'a989d2d0d896ec4adaf3d66e19050c519d9e58efc8d588a51ab0185283bf21fb')
