@@ -5,8 +5,8 @@
 
 pkgname=lib32-avahi
 pkgver=0.6.31
-pkgrel32=7
-pkgrel=6
+pkgrel32=9
+pkgrel=7
 pkgdesc="A multicast/unicast DNS-SD framework"
 arch=('x86_64')
 url="http://www.avahi.org/"
@@ -14,7 +14,7 @@ depends=('expat' 'lib32-libdaemon' 'lib32-glib2' 'lib32-dbus-core' 'lib32-libcap
 license=('LGPL')
 groups=lib32
 source=(http://mirrors.kernel.org/archlinux/extra/os/i686/${pkgname/lib32-/}-${pkgver}-${pkgrel32}-i686.pkg.tar.xz)
-sha256sums=('3f488973297180f0e5e82dca65bd61795c56e5e5cf785c6ad834b9dfbbb82f06')
+sha256sums=('9f8449e08643e18dfcde7424bda951a6e82b10d37dc27cc83de1bfb04f5b64d1')
 
 package() {
 	mkdir -p ${pkgdir}/usr/lib32
