@@ -1,31 +1,26 @@
 # Contributor: Geoff Teale <tealeg@member.fsf.org>
-pkgname=odfpy-svn
-pkgver=117
+_pkgname=odfpy
+pkgname=${_pkgname}-svn
+pkgver=125
 pkgrel=1
 pkgdesc="A complete API for OpenDocument in Python"
-arch=('i686' 'x86_64')
-url="http://opendocumentfellowship.com/projects/odfpy"
+arch=('any')
+url="http://joinup.ec.europa.eu/software/odfpy/home"
 license=('GPL')
 depends=('python')
-provides=('odfpy')
-conflicts=('odfpy')
-source=()
-md5sums=()
+makedepends=('svn')
+provides=("${_pkgname}")
+conflicts=("${_pkgname}")
+source=("${_pkgname}::svn+https://joinup.ec.europa.eu/svn/odfpy/trunk")
+md5sums=('SKIP')
 
-_svntrunk=https://joinup.ec.europa.eu/svn/odfpy/trunk
-_svnmod=odfpy
+pkgver() {
+  cd ${srcdir}/${_pkgname}
+  svnversion | tr -d '[A-z]'
+}
 
 build() {
-  cd $startdir/src
-  touch ~/.subversion
-
-  svn co $_svntrunk $_svnmod
-
-  msg "SVN checkout done or server timeout"
-  msg "Starting make..."
-
-  cp -R $_svnmod $_svnmod-build
-  cd $_svnmod-build
+  cd "${srcdir}/${_pkgname}"
 
   python setup.py install --root=${pkgdir} || return 1
 }
