@@ -2,7 +2,7 @@
 # Contributor: Sergey Mastykov <smastykov[at]gmail[dot]com>
 
 pkgname=python-pyramid
-pkgver=1.4.1
+pkgver=1.4.2
 pkgrel=1
 pkgdesc='Pyramid is a very general open source Python web framework.'
 arch=('any')
@@ -25,7 +25,7 @@ optdepends=(
          'python-waitress: pserve/pcreate'
 	)
 source=(http://pypi.python.org/packages/source/p/pyramid/pyramid-${pkgver}.tar.gz)
-sha256sums=('24e4d045294e1be4693451ac0809bbaff9b1e2aef3e448255973b6f021dbc74f')
+sha256sums=('fd9bba536f4129150299cb52cef0c0461f352aef45176e74d3fa56f185152bc3')
 
 build() {
   cd $srcdir/pyramid-${pkgver}
