@@ -1,7 +1,7 @@
 # Maintainer: Julien Pecqueur (JPEC) <jpec[at]julienpecqueur[dot]net>
 pkgname=raspyplayer
-pkgver=2.3
-pkgrel=3
+pkgver=2.4
+pkgrel=4
 pkgdesc="A simple media player originally designed for the Raspberry Pi."
 url="http://raspyplayer.org"
 arch=('any')
