@@ -1,8 +1,8 @@
 # Maintainer: Chris Fordham <chris.fordham@rightscale.com>
 
 pkgname=rightscale-systemd
-pkgver=0.1.3
-pkgrel=1
+pkgver=0.1.4
+pkgrel=2
 pkgdesc='RightScale/RightLink systemd support.'
 arch=(any)
 url=http://rightscale.com/
