@@ -1,7 +1,7 @@
 # Maintainer: Silvernode <hookahkitty@gmail.com>
 pkgname=zymp3
 pkgver=0.2
-pkgrel=2
+pkgrel=3
 pkgdesc="A youtube to mp3 converter"
 url="http://www.homebutter.com"
 arch=('x86_64' 'i686')
@@ -13,7 +13,7 @@ conflicts=()
 replaces=()
 backup=()
 source=("http://www.homebutter.com/scripts/${pkgname}-${pkgver}.tar.gz")
-md5sums=('00aed60b7c41c8a2d323917db607e848')
+md5sums=('cc59e6ef90ed850b6544529cffa93714')
 
 build() {
   #tar zxvf "${srcdir}/${pkgname}-${pkgver}.tar.gz"
