@@ -1,6 +1,12 @@
-2013-05-28 Build User <jenkins@coast-project.org>
+2013-06-03 Build User <jenkins@coast-project.org>
 
       
+      PKGBUILD prepared for new jenkins-ci version 1.517
+
+
+2013-05-28 Build User <jenkins@coast-project.org>
+
+      jenkins-ci-1.516-1:
       PKGBUILD prepared for new jenkins-ci version 1.516
 
       not enabling/starting systemd service anymore, hint from @hacosta
